# feup-da-proj2

./: .gitattributes  CMakeLists.txt  Presentation.pptx  README.md  main.cpp
Code/include/: FileHandler.h  Graph.h  Interface.h  ToyGraph.h  Utils.h
Code/src/: FileHandler.cpp  Graph.cpp  Interface.cpp  ToyGraph.cpp  Utils.cpp
Documentation/: Doxyfile
Documentation/html/: _file_handler_8h.html  _file_handler_8h.js  _file_handler_8h_source.html  _graph_8h.html  _graph_8h.js  _graph_8h_source.html  _interface_8h.html  _interface_8h_source.html  _toy_graph_8h.html  _toy_graph_8h.js  _toy_graph_8h_source.html  _utils_8h.html  _utils_8h.js  _utils_8h_source.html  annotated.html  annotated_dup.js  class_edge-members.html  class_edge.html  class_edge.js  class_file_handler-members.html  class_file_handler.html  class_file_handler.js  class_graph-members.html  class_graph.html  class_graph.js  class_interface-members.html  class_interface.html  class_interface.js  class_node-members.html  class_node.html  class_node.js  class_toy_graph-members.html  class_toy_graph.html  class_toy_graph.js  class_utils-members.html  class_utils.html  class_utils.js  classes.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_23fdee2f6995db16c755697cdf620cf4.js  (+10 more)
Documentation/latex/: _file_handler_8h.tex  _file_handler_8h_source.tex  _graph_8h.tex  _graph_8h_source.tex  _interface_8h.tex  _interface_8h_source.tex  _toy_graph_8h.tex  _toy_graph_8h_source.tex  _utils_8h.tex  _utils_8h_source.tex  annotated.tex  class_edge.tex  class_file_handler.tex  class_graph.tex  class_interface.tex  (+7 more)
(+41 files in other folders)
